# fastapi-feature-flags

./: .env_sample  Makefile  docker-compose.yml  pyproject.toml
src/: app.py  keys_utils.py  models.py  settings.py
src/common/: base_model.py  db.py
src/lib/: json_logic.py
src/routes/: __init__.py  auth_utils.py  evaluation.py  health.py
src/routes/admin/: __init__.py  environments.py  projects.py
tests/: conftest.py  test_models.py
tests/lib/: test_flag_evaluation.py
tests/routes/: test_admin.py  test_evaluation.py
